@@ -45,8 +45,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.testRelease>11</maven.compiler.testRelease>
+        <maven.compiler.release>8</maven.compiler.release>
+        <maven.compiler.testRelease>8</maven.compiler.testRelease>
         <junit.version>5.10.2</junit.version>
         <bc.version>1.85.2</bc.version>
         <gson.version>2.14.0</gson.version>
@@ -136,30 +136,31 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.net.http</arg>
-                        <arg>--add-reads</arg>
-                        <arg>${module.name}=java.net.http</arg>
-                        <arg>--add-reads</arg>
-                        <arg>${module.name}=org.bouncycastle.provider</arg>
-                    </compilerArgs>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>${module.name}</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${jacoco.argLine} --add-modules java.net.http --add-reads ${module.name}=java.net.http --add-reads ${module.name}=org.bouncycastle.provider</argLine>
+                    <argLine>${jacoco.argLine}</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>${jacoco.argLine} --add-modules java.net.http --add-reads ${module.name}=java.net.http --add-reads ${module.name}=org.bouncycastle.provider</argLine>
+                    <argLine>${jacoco.argLine}</argLine>
                 </configuration>
                 <executions>
                     <execution>
